--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 streamlit==1.32.0
-pandas==2.1.4
+pandas==1.5.3  # More stable with Python 3.10
 plotly==5.18.0
 sqlalchemy==2.0.25
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
-openpyxl==3.1.2s
+openpyxl==3.1.2
+numpy==1.24.0  # Explicitly add this
